--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
+    "g": "^2.0.1",
     "mongodb": "^4.1.4",
+    "ngrok": "^4.3.3",
+    "nodemon": "^2.0.22",
     "stripe": "^8.188.0"
   }
 }
